--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>UoN Y1 CS Chatroom using Supabase</title>
+    <title>Chatroom</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
     <script src="index.js" defer></script>
 </head>
 <body id="container">
     <header>
-        <h1>UoN Y1 CS Chatroom using Supabase</h1>
+        <h1><a href="index.html">Web project Y1 CS Chatroom using Supabase</a></h1>
     </header>
     <aside class="sidebar">
         <ul>
