--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <aside class="sidebar">
         <ul>
             <ul><a href="https://github.com/GitFarhanS">My GitHub </a></ul>
+            <ul><a href="schema.html">Schema </a></ul>
         </ul>
     </aside>
     <main class="content">
